--- a/qf_vr_apps/qf_vr_raw_app/GCC_Project/Makefile
+++ b/qf_vr_apps/qf_vr_raw_app/GCC_Project/Makefile
@@ -6,7 +6,7 @@ include config.mk
 
 VPATH:=$(OUTPUT_PATH)
 
-all: _makedirs_ external_srcs Appdir
+all: _makedirs_ external_srcs Appdir AMAZON
 	-${HIDE}$(RM) $(OUTPUT_PATH)$(DIR_SEP)bin$(DIR_SEP)$(OUTPUT_FILE).*
 	make -f makefiles/Makefile_output
 	@echo Copy output files ...
