qomu_helloworldsw working
Signed-off-by: Tim Saxe <saxe@quicklogic.com>

--- a/qomu_apps/qomu_helloworldsw/GCC_Project/makefiles/Makefile_gateware
+++ b/qomu_apps/qomu_helloworldsw/GCC_Project/makefiles/Makefile_gateware
@@ -1,6 +1,7 @@
 ####### SW Files (routines to access FPGA IP) ##########
 $(info MAIN_FPGA_SRC_DIR=$(MAIN_FPGA_SRC_DIR))
 MAIN_FPGA_SRCS:=$(wildcard $(MAIN_FPGA_SRC_DIR)/*.c)
+$(info MAIN_FPGA_SRCS=$(MAIN_FPGA_SRCS))
 filters=
 SRCS:=$(filter-out $(filters),$(notdir $(MAIN_FPGA_SRCS)))
 OBJS:=$(addprefix $(OUTPUT_PATH)/,$(SRCS:.c=.o))
