--- a/qf_vr_apps/qf_amazon_alexa_app/GCC_Project/makefiles/Makefile_Appdir
+++ b/qf_vr_apps/qf_amazon_alexa_app/GCC_Project/makefiles/Makefile_Appdir
@@ -1,14 +1,14 @@
 
-APP_SRCS:=$(wildcard $(APP_DIR)/*.c)
+MAIN_SRCS:=$(wildcard $(MAIN_DIR)/*.c)
 
-#$(info APP_PATTERN $(APP_DIR)/*.c)
-#$(info APP_SRCS $(APP_SRCS))
-#$(info APP_DIR $(APP_DIR))
-#$(info APP_SRCS $(APP_SRCS))
+#$(info MAIN_PATTERN $(MAIN_DIR)/*.c)
+#$(info MAIN_SRCS $(MAIN_SRCS))
+#$(info MAIN_DIR $(MAIN_DIR))
+#$(info MAIN_SRCS $(MAIN_SRCS))
 
-SRCS:=$(notdir $(APP_SRCS))
+SRCS:=$(notdir $(MAIN_SRCS))
 OBJS:=$(addprefix $(OUTPUT_PATH)/,$(SRCS:.c=.o))
-SRC_PATH:= $(APP_DIR)
+SRC_PATH:= $(MAIN_DIR)
 
 include $(COMMON_STUB)
 
