--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ before_install:
   - conda activate
   - pip install python-constraint
   - pip install serial
+  - pip install pip==18.1
   - pip install git+https://github.com/QuickLogic-Corp/quicklogic-fasm
   - conda deactivate
   - export PATH="$INSTALL_DIR/quicklogic-arch-defs/bin:$INSTALL_DIR/quicklogic-arch-defs/bin/python:$PATH"
