--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,8 @@ before_install:
   - conda activate
   - pip install python-constraint
   - pip install serial
-  - pip install pip==18.1
-  - pip install git+https://github.com/QuickLogic-Corp/quicklogic-fasm@318abca
+  - pip install --upgrade pip setuptools wheel
+  - pip install git+https://github.com/QuickLogic-Corp/quicklogic-fasm
   - conda deactivate
   - export PATH="$INSTALL_DIR/quicklogic-arch-defs/bin:$INSTALL_DIR/quicklogic-arch-defs/bin/python:$PATH"
   - source "$INSTALL_DIR/conda/etc/profile.d/conda.sh"
