--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ before_install:
   - pip install python-constraint
   - pip install serial
   - pip install --upgrade pip setuptools wheel
-  - pip install git+https://github.com/QuickLogic-Corp/quicklogic-fasm
+  - pip install --no-binary git+https://github.com/QuickLogic-Corp/quicklogic-fasm
   - conda deactivate
   - export PATH="$INSTALL_DIR/quicklogic-arch-defs/bin:$INSTALL_DIR/quicklogic-arch-defs/bin/python:$PATH"
   - source "$INSTALL_DIR/conda/etc/profile.d/conda.sh"
