--- a/.travis.yml
+++ b/.travis.yml
@@ -27,8 +27,7 @@ before_install:
   - pip install python-constraint
   - pip install serial
   - pip install --upgrade pip setuptools wheel
-  - pip install textx
-  - pip install Arpeggio
+  - pip install fasm
   - pip install git+https://github.com/QuickLogic-Corp/quicklogic-fasm
   - conda deactivate
   - export PATH="$INSTALL_DIR/quicklogic-arch-defs/bin:$INSTALL_DIR/quicklogic-arch-defs/bin/python:$PATH"
