--- a/qf_apps/qf_ssi_ai_app/GCC_Project/makefiles/Makefile_riff_file
+++ b/qf_apps/qf_ssi_ai_app/GCC_Project/makefiles/Makefile_riff_file
@@ -1,7 +1,9 @@
 
 RIFF_FILE_SRCS:=$(wildcard $(RIFF_FILE_DIR)/*.c )
 
-SRCS:=$(notdir $(RIFF_FILE_SRCS))
+filters=
+
+SRCS:=$(filter-out $(filters),$(notdir $(RIFF_FILE_SRCS)))
 OBJS:=$(addprefix $(OUTPUT_PATH)/,$(SRCS:.c=.o))
 SRC_PATH:= $(RIFF_FILE_DIR)
 
