--- a/qf_vr_apps/qf_vr_aec_app/GCC_Project/makefiles/Makefile_output
+++ b/qf_vr_apps/qf_vr_aec_app/GCC_Project/makefiles/Makefile_output
@@ -2,7 +2,7 @@
 
 all: $(OUTPUT_PATH)/*.o
 	@echo Linking ...
-	$(HIDE)$(LD) $(OUTPUT_PATH)$(DIR_SEP)*.o $(LD_FLAGS_1) $(LIBS) $(LD_FLAGS_2)
+	$(HIDE)$(LD) -z muldefs $(OUTPUT_PATH)$(DIR_SEP)*.o $(LD_FLAGS_1) $(LIBS) $(LD_FLAGS_2)
 	@echo Convert ELF to BIN
 	$(HIDE)$(ELF2BIN) $(ELF2BIN_OPTIONS) $(OUTPUT_PATH)$(DIR_SEP)$(OUTPUT_FILE).elf $(OUTPUT_PATH)$(DIR_SEP)$(OUTPUT_FILE).bin
 	@echo Create text symbol table.
