Added file system monitor task to report when free disk space is low

--- a/qf_apps/qf_ssi_ai_app/GCC_Project/Makefile
+++ b/qf_apps/qf_ssi_ai_app/GCC_Project/Makefile
@@ -25,7 +25,7 @@ _makedirs_:
 
 .PHONY: external_srcs
 external_srcs: Startup HAL FreeRTOS Libraries BSP DatablockProcessor GENERATED \
-    SENSOR_AUDIO
+    SENSOR_AUDIO FS_MONITOR
 	@echo "External sources built"
 
 .PHONY: appdir
@@ -106,6 +106,14 @@ clean_DatablockProcessor:
 	make -f makefiles/Makefile_DatablockProcessor clean
 
 CLEAN_TARGET += DatablockProcessor
+
+.PHONY:FS_MONITOR
+FS_MONITOR:
+	make -f makefiles/Makefile_fs_monitor
+clean_FS_MONITOR:
+	make -f makefiles/Makefile_fs_monitor clean
+
+CLEAN_TARGET += FS_MONITOR
 
 .PHONY: GENERATED
 GENERATED:
