fix ci steps, modify envsetup

--- a/.github/workflows/ci-linux-build.yml
+++ b/.github/workflows/ci-linux-build.yml
@@ -40,7 +40,7 @@ jobs:
         which arm-none-eabi-gcc
         which python
         which pip
-        ql_symbiflow -h
+        which ql_symbiflow
 
     - name: "build-qf-apps"
       run: |
