--- a/qorc_apps_au/qorc_helloworldfpga_au/.gitignore
+++ b/qorc_apps_au/qorc_helloworldfpga_au/.gitignore
@@ -48,9 +48,9 @@
 /**/rtl/build
 /**/rtl/Makefile.symbiflow
 
-# au generated files and dirs
+# au/mx generated files and dirs
 fpga/rtl/config_bit_gen
-fpga/rtl/helloworldfpga_linux_cache
+fpga/rtl/*_linux_cache
 fpga/rtl/logic_optimizer/
 fpga/rtl/*_yosys.log
 fpga/rtl/*.blif
